--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -39,5 +39,5 @@ jobs:
       
       - name: Terraform Apply
         id: apply
-        run: terraform apply --auto-approve
+        run: terraform apply
         working-directory: ./prod
